# shuftle

./: .env.dist  .gitignore  Cargo.toml  README.md  compose.yaml  flake.nix
.docker/images/keycloak/: Dockerfile
.docker/images/postgres/: Dockerfile
.github/workflows/: audit.yml  general.yml
application-server/: Cargo.toml
client-sdk/: Cargo.toml
client-sdk/src/: lib.rs
docs/: architecture.drawio
game-server/: Cargo.toml
shuftle-client/: Cargo.toml
shuftle-client/src/: main.rs
shuftlib/: Cargo.toml
shuftlib/examples/: tressette.rs
shuftlib/src/: cards.rs  tressette.rs
shuftlib/src/common/: cards.rs  hands.rs
shuftlib/tests/: tressette.rs
