[workspace]

members = [
  "application-server",
  "client-sdk",
  "game-server",
  "shuftle-client",
  "shuftlib",
]

resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_in_result = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
panic_in_result_fn = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
todo = "warn"
cast_lossless = "warn"
cognitive_complexity = "warn"
