[package]
name = "shuftlib"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
array-init = "2.1.0"
num-rational = "0.4.1"
once_cell = "1.19.0"
rand="0.8"
regex = "1.10.3"
strum = {version="0.25", default-features=false, features=["derive"]}

[dev-dependencies]
proptest="1.4"

[lints]
workspace = true

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
